--- a/templates/add.html
+++ b/templates/add.html
@@ -1,18 +1,14 @@
-{% extends "base.html"%}
-{% block title %}Add{% endblock %}
-
-{% block content %}
-<form action="#" method="post">
-    <p>number 1:</p>
-    <p><input type="text" name="nm" /></p>
-    <p><input type="submit" name="nm" /></p>
-</form>
-{% endblock %}
-
-{% block content %}
-<form action="#" method="post">
-    <p>number 2:</p>
-    <p><input type="text" name="nm" /></p>
-    <p><input type="submit" name="nm" /></p>
-</form>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>add</title>
+</head>
+<body>
+    <form action="" method="post">
+        <p>Value1 : <input type="text" name="val1"></p>
+        <p>Value2 : <input type="text" name="val2"></p>
+        <input type="submit" value="정보 넘기기">
+    </form>
+</body>
+</html>
